--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+ul {
+  margin: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -78,3 +82,32 @@ header nav li a {
   width: 100%;
   height: 100%;
 }
+
+/* MAIN */
+
+main {
+  height:600px;
+  padding-top: 100px;
+}
+
+.allPlanetsSmall {
+  background-repeat: no-repeat;
+    height: 100px;
+    width: 100%;
+    display: inline-block;
+    background-position: center;
+}
+
+hr {
+    border-top: 2px solid #C3C3C3;
+    width: 60px;
+    margin:2em auto;
+    transition: width 0.25s ease-out;
+}
+
+#allPlanets p {
+  letter-spacing: 1.5px;
+}
+
+
+
